--- a/Docs/Tesi/Deltaspike.tex
+++ b/Docs/Tesi/Deltaspike.tex
@@ -55,7 +55,7 @@ public class Authorizer {
 Il metodo appena definito verrà invocato da Deltaspike in maniera automatica tutte le volte che si invocherà \textsl{deleteContract()}. Nel caso \textsl{canDeleteContracts()} restituisca \textsl{true}, l'eliminazione può proseguire, altrimenti viene generata un'eccezione.
 
 \paragraph{Rendere sicura una pagina} 
-La sicurezza su base pagina si implementa definendo interfacce e classi che rappresentano rispettivamente cartelle e pagine. Ad esempio, per rendere sicura la pagina \textsl{home.xhtml} che si trova dentro la cartella \textsl{pages}, si definisce un interaccia \textsl{Pages} con all'interno una classe \textsl{Home}; le classi così definite devono implementare l'interfaccia \textsl{ViewConfig} di Deltaspike. Il \textit{path} è relativo alla cartella \textsl{webapp} dell'applicazione, quindi la classe Home contenuta nell'interaccia Pages fa riferimento alla pagina \textsl{webapp/pages/home.xhtml}. I nomi sono \textit{case insensitive}: la classe Home fa riferimento alle pagine home.xhtml e Home.xhtml; stesso discorso vale per le interfacce.\newline
+La sicurezza su base pagina si implementa definendo interfacce e classi che rappresentano rispettivamente cartelle e pagine. Ad esempio, per rendere sicura la pagina \textsl{home.xhtml} che si trova dentro la cartella \textsl{pages}, si definisce un interfaccia \textsl{Pages} con all'interno una classe \textsl{Home}; le classi così definite devono implementare l'interfaccia \textsl{ViewConfig} di Deltaspike. Il \textit{path} è relativo alla cartella \textsl{webapp} dell'applicazione, quindi la classe Home contenuta nell'interfaccia Pages fa riferimento alla pagina \textsl{webapp/pages/home.xhtml}. I nomi sono \textit{case insensitive}: la classe Home fa riferimento alle pagine home.xhtml e Home.xhtml; stesso discorso vale per le interfacce.\newline
 Il metodo più facile per rendere sicuro un insieme di più pagine è creare un file Java e di definire all'interno di quest'ultimo tutta la gerarchia di interfacce e di classi - ricordando di omettere il \textit{modifier} \textsl{public} per ognuna delle interfacce/classi, altrimenti si otterrebbe un errore di compilazione.\newline
 Ognuna delle classi definite deve essere annotata con l'annotazione \textsl{@Secured}, completata con l'attributo \textsl{value} che specifica una classe definita dallo sviluppatore che implementa l'interfaccia \textsl{AccessDecisionVoter} di Deltaspike; questa classe deve essere un \textit{bean} di CDI, tipicamente \textsl{Application Scoped} .
 La classe specificata deve implementare il metodo \textsl{public Set\textless SecurityViolation\textgreater \space checkPermission()}, che viene invocato da Deltaspike ogni volta che si tenta di accedere alla pagina.\newline
