--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -1,7 +1,7 @@
 Di seguito se elencano i casi d'uso per ciascun tipo di utente che interagisce col sistema. 
 
 \paragraph{Utente generico}
-Si racchiudono nella figura dell' Utente generico i casi d'uso che sono comuni a tutti gli altri tipi di utenti. Tali casi d'uso sono riportati in figura \ref{use_case_diag_generic}
+Si racchiudono nella figura dell'Utente generico i casi d'uso che sono comuni a tutti gli altri tipi di utenti. Tali casi d'uso sono riportati in figura \ref{use_case_diag_generic}
 
 \begin{figure}[h]
   \caption{Diagramma dei casi d'uso dell'Utente generico}
@@ -30,10 +30,10 @@ Si racchiudono nella figura dell' Utente generico i casi d'uso che sono comuni a
     Per cambiare la password è necessario inserire la vecchia password e la nuova password due volte per prevenire errori.
   \end{itemize}
 
-  Una volta effettuate le modifiche desiderate l'Utente clicca su ``Salva''. Le modifiche vegono salvate e viene visualizzata la schermata precedente.\\
+  Una volta effettuate le modifiche desiderate l'Utente clicca su ``Salva''. Le modifiche vengono salvate e viene visualizzata la schermata precedente.\\
   
   Percorso alternativo:
-  l'Utente inserisce una email non valida, oppure commette un errore riepiempo i campi : vecchia password, nuova password, password di verifica. L'Utente è avvertito dell'errore con un messagio ed è invitato a riprovare.
+  l'Utente inserisce una email non valida, oppure commette un errore riempiendo i campi : vecchia password, nuova password, password di verifica. L'Utente è avvertito dell'errore con un messaggio ed è invitato a riprovare.
   
 
 \end{enumerate}
@@ -68,8 +68,8 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
 	\item Il responsabile scientifico\\
 	  Per selezionare un responsabile scientifico è possibile usare l'apposito menù a tendina o, in alternativa, qualora la persona cercata non sia nell'elenco, aggiungerla cliccando sul pulsante ``Aggiungi''.
 	\item Il referente
-	\item La dittà\\
-	  Per selezionare una dittà si può usare l'apposito menù a tendina o, se la dittà cercata non fosse presente nell'elenco, aggiungerne una nuova cliccando sul pulsante ``Aggiungi''.Per ulteriori dettagli si rimanda al
+	\item La ditta\\
+	  Per selezionare una ditta si può usare l'apposito menù a tendina o, se la ditta cercata non fosse presente nell'elenco, aggiungerne una nuova cliccando sul pulsante ``Aggiungi''.Per ulteriori dettagli si rimanda al
 	  rispettivo caso d'uso.
 	\item Il nome del progetto CIA
 	\item Il Repertorio
@@ -88,7 +88,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
       in base ai quali dividere l'importo totale. Le voci non modificabili sono calcolate in relazione ai campi modificabili facendo riferimento alle norme di ateneo. Le voci modificabili sono:
       \begin{itemize}
 	\item Personale: stabilisce la quota destinata al personale; è l'unico campo principale che l'operatore può modificare e in base al quale vengono calcolati gli altri.
-	\item Missioni, Materiale di consumo, etc. sono sottocampi di Beni e Servizi e servono per meglio specificare come verrà ripartita la quota destinata a ``Beni e Servizi''.
+	\item Missioni, Materiale di consumo, etc. sono sotto-campi di Beni e Servizi e servono per meglio specificare come verrà ripartita la quota destinata a ``Beni e Servizi''.
       \end{itemize}
     \item Gestione delle rate\\
       
@@ -96,7 +96,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
       che sta creando. Una volta inserite una o più rate
       queste vengono visualizzate in una tabella e l'Operatore
       ha la possibilità di modificare, visualizzare, eliminare una rata cliccando sui tasti ``Modifica'',``Visualizza'' ed ``Elimina'' che compaiono sulla destra, nella riga della tabella
-       corrispondente alla rata in questione. Per i dettagli riquardo alle operazioni sulle rate si rimanda ai corrispettivi casi d'uso.
+       corrispondente alla rata in questione. Per i dettagli riguardo alle operazioni sulle rate si rimanda ai corrispettivi casi d'uso.
 
       
     \item Inserimento della documentazione relativa alla convenzione\\
@@ -139,8 +139,8 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
   L'Operatore effettua i cambiamenti desiderati quindi clicca sul pulsante ``Salva''.\\
 
   Percorso alternativo:
-  l'Operatore può cliccare sul tasto "Annulla" in qualsiasi momento per tornare alla schermata "Visualizzazione delle convenzioni" senza salvare le modifiche effettuate.
-  Se l'Operatore clicca su "Salva" ma alcuni valori immessi non sono corretti, viene visualizzato un messaggio di errore e non si torna alla schermata "Visualizzazione delle
+  l'Operatore può cliccare sul tasto ``Annulla" in qualsiasi momento per tornare alla schermata ``Visualizzazione delle convenzioni" senza salvare le modifiche effettuate.
+  Se l'Operatore clicca su ``Salva" ma alcuni valori immessi non sono corretti, viene visualizzato un messaggio di errore e non si torna alla schermata ``Visualizzazione delle
   convenzioni". I cambiamenti effettuati non vengono (ovviamente) salvati.
   
 \item Visualizzazione di una convenzione/contributo\\
@@ -155,7 +155,7 @@ Percorso base:
 l'operatore può inserire una rata sia in fase di creazione della convenzione/contributo sia in fase di modifica; in entrambi i casi dopo aver raggiunto
 la scheda ``Rate'' l'Operatore clicca sul pulsante ``Aggiungi una rata''.  
 Viene visualizzata una finestra di dialogo suddivisa in varie schede,
-ognuna corrispondente ad un passo della procedura. E' possibile passare da una scheda all'altra mediante i pulsanti "Avanti" e "Indietro". I passi sono:
+ognuna corrispondente ad un passo della procedura. E' possibile passare da una scheda all'altra mediante i pulsanti ``Avanti" e ``Indietro". I passi sono:
 \begin{enumerate}
   \item Inserimento dei dati della rata\\
   
@@ -169,7 +169,7 @@ ognuna corrispondente ad un passo della procedura. E' possibile passare da una s
     \item Numero di Sospeso
     \item Numero di fatturato
     \item Data fatturata
-    \item E'stata pagata la fattura?
+    \item È stata pagata la fattura?
     \item Deve essere allegata la fattura?
     \item Note
     \end{itemize}
@@ -179,11 +179,11 @@ ognuna corrispondente ad un passo della procedura. E' possibile passare da una s
    
   \item Inserimento della tabella di ripartizione\\
   
-  Il procedimento è del tutto analogo  a quello descritto nel caso d'uso "Inserimento della tabella di ripartizione" per l'inserimento di 
+  Il procedimento è del tutto analogo  a quello descritto nel caso d'uso ``Inserimento della tabella di ripartizione" per l'inserimento di 
   una nuova convenzione/contributo. 
 \end{enumerate}
 
-Le modifiche vengono salvate cliccando sul pulsante "Salva". Si ritorna alla schermata precedente;
+Le modifiche vengono salvate cliccando sul pulsante ``Salva". Si ritorna alla schermata precedente;
 
 Percorso alternativo:
 l'Operatore clicca sul pulsante ``Annulla'', viene chiusa la finestra di dialogo senza che la rata sia stata inserita.
@@ -220,16 +220,16 @@ una finestra di dialogo contente i seguenti campi obbligatori:
  \item Codice fiscale
  \item Partita IVA
 \end{itemize}
-l'Operatore dopo aver riempito i campi clicca su ``Salva'', la nuova dittà viene salvata e si ritorna alla schermata precedente.
+l'Operatore dopo aver riempito i campi clicca su ``Salva'', la nuova ditta viene salvata e si ritorna alla schermata precedente.
 
 Percorso alternativo:
 l'Operatore clicca su ``Salva'' senza aver riempito tutti i campi obbligatori, viene visualizzato un messaggio di errore che invita l'utente inserire tali campi.
 
 Percorso alternativo 2:
-l'Operatore clicca su ``Salva'' avendo inserito un codice fiscale di una dittà già inserita. Viene visualizzato un opportuno messagio di errore.
+l'Operatore clicca su ``Salva'' avendo inserito un codice fiscale di una ditta già inserita. Viene visualizzato un opportuno messaggio di errore.
 
 Percorso alternativo 3:
-si può inserire una dittà anche in fase di creazione di una convenzione/contributo cliccando sul pulsante ``Aggiungi'' accanto al campo ``ditta'' nella scheda ``Dati generali''.
+si può inserire una ditta anche in fase di creazione di una convenzione/contributo cliccando sul pulsante ``Aggiungi'' accanto al campo ``ditta'' nella scheda ``Dati generali''.
 
 \item Modifica di una Ditta\\
 
@@ -238,13 +238,13 @@ l'Operatore clicca su ``Visualizza elenco Ditte'' dalla pagina iniziale, viene v
 corrispondente alla ditta di interesse clicca sul pulsante ``Modifica''che appare a destra sulla riga selezionata. Viene visualizzata
 una finestra di dialogo analoga a quella dell'inserimento.
 
-l'Operatore dopo aver modificato i campi desiderati clicca su ``Salva'', la  dittà viene salvata e si ritorna alla schermata precedente.
+l'Operatore dopo aver modificato i campi desiderati clicca su ``Salva'', la  ditta viene salvata e si ritorna alla schermata precedente.
 
 Percorso alternativo:
 l'Operatore clicca su ``Salva'' senza aver riempito tutti i campi obbligatori, viene visualizzato un messaggio di errore che invita l'utente inserire tali campi.
 
 Percorso alternativo 2:
-l'Operatore clicca su ``Salva'' avendo inserito un codice fiscale di una dittà già inserita. Viene visualizzato un opportuno messagio di errore.
+l'Operatore clicca su ``Salva'' avendo inserito un codice fiscale di una ditta già inserita. Viene visualizzato un opportuno messaggio di errore.
 
 \item Visualizzazione di una Ditta\\
   Percorso base:
@@ -275,7 +275,7 @@ I casi d'uso del Docente sono rappresentati in figura \ref{use_case_diag_teacher
  
  Il docente dalla schermata ``Lista delle convenzioni/contributi'' può cliccare sul pulsante ``Visualizza'' relativo ad una convenzione/contributo; compare una schermata suddivisa in schede analoga a quella della modifica/creazione
  della convenzione. Il docente può navigare fra le schede cliccandoci sopra. Non è permessa nessuna modifica ai dati della convenzione/contributo tuttavia il docente può inserire degli allegati dalla scheda ``Allegati''. Cliccando su ``Salva''
- gli allegati inseriti dal docente vengono memorizzati, al contrario cliccando su ``Indietro'' le modifiche vegono scartate.
+ gli allegati inseriti dal docente vengono memorizzati, al contrario cliccando su ``Indietro'' le modifiche vengono scartate.
  
  
  
@@ -298,7 +298,7 @@ Una rappresentazione dei casi d'uso dell'Amministratore è disponibile in figura
  
  
  Percorso base:
- l'Amministratore, dopo aver effettutao il login, può cliccare sul pulsante ``Crea nuovo utente''; viene visualizzata una schermata che permette
+ l'Amministratore, dopo aver effettuato il login, può cliccare sul pulsante ``Crea nuovo utente''; viene visualizzata una schermata che permette
  di inserire i dati dell'utente:
  \begin{itemize}
   \item Nome
@@ -306,7 +306,7 @@ Una rappresentazione dei casi d'uso dell'Amministratore è disponibile in figura
   \item Matricola
   \item Email
   \item	Password\\
-    In realtà i campi che l'Amministratore deve riempire sono due: un campo pasword ed un campo di verifica che devono corrispondere col precedente.
+    In realtà i campi che l'Amministratore deve riempire sono due: un campo password ed un campo di verifica che devono corrispondere col precedente.
   \item Ruolo\\
     L'Amministratore può scegliere il ruolo dal rispettivo menù a tendina, i ruoli disponibili sono Operatore, Amministratore, Docente.
  \end{itemize}
