--- a/Docs/Tesi/freemarker.tex
+++ b/Docs/Tesi/freemarker.tex
@@ -27,7 +27,7 @@ Passati questi parametri, FreeMarker costruisce il \textit{data model}, che è e
 \item la radice è un nodo speciale chiamato, appunto, \textit{root}
 \item i nodi intermedi, chiamati anche \textsl{variabili}, possono essere:
 \begin{itemize}
-\item \textit{hashes} se i loro figli sono identficati tramite nomi
+\item \textit{hashes} se i loro figli sono identificati tramite nomi
 \item \textit{sequences} se i figli sono identificati tramite un indice sequenziale che inizia da 0 (i.e., sono l'equivalente di un array)
 \end{itemize}
 In entrambi i casi, i loro figli vengono detti \textit{subvariables}
