--- a/Docs/Tesi/Introduzione.tex
+++ b/Docs/Tesi/Introduzione.tex
@@ -31,7 +31,7 @@ Si elencano di seguito i requisiti di Jama:
 \begin{itemize}
 \item inserire una convenzione/contributo
 \item visualizzare l'elenco delle convenzioni/contributi
-\item visualizzazione dello scadenziario
+\item visualizzazione dello scadenzario
 \item gestione delle rate di una convenzione/contributo (inserimento, modifica, eliminazione, visualizzazione)
 \item modifica di una convenzione/contributo
 \item eliminazione di una convenzione/contributo
@@ -41,13 +41,13 @@ Si elencano di seguito i requisiti di Jama:
 Ognuno dei requisiti viene discusso in dettaglio nel seguito del documento.
 
 \section{Analisi}
-Nel Capitolo \ref{analisi} vengono descritti il \textsl{Modello di Dominio} e il \textsl{Diagramma dei Casi d'Uso}. Una cosa da mettere in evidenza è il fatto che il Modello di Dominio dell'applicazione è costituito da due parti 'ortogonali' tra loro: il \textsl{Modello di Business}, che descrive la 'Business Logic' dell'applicazione, e il \textsl{Modello degli Utenti}, che descrive il modo in cui l'applicazione gestisce gli utenti e i loro permessi.
+Nel Capitolo \ref{analisi} vengono descritti il \textsl{Modello di Dominio} e il \textsl{Diagramma dei Casi d'Uso}. Una cosa da mettere in evidenza è il fatto che il Modello di Dominio dell'applicazione è costituito da due parti \textquoteleft ortogonali' tra loro: il \textsl{Modello di Business}, che descrive la \textquoteleft Business Logic' dell'applicazione, e il \textsl{Modello degli Utenti}, che descrive il modo in cui l'applicazione gestisce gli utenti e i loro permessi.
 
 \begin{comment}
 \paragraph{Modello di Dominio}
-Il Modello di Dominio è una descrizione delle relazioni tra le \textsl{classi} dell'applicazione: senza addentrarsi nei dettagli della \textsl{Programmazione ad Oggetti}, il concetto è che una classe rappresenta un oggetto del mondo reale; così una \textsl{Convenzione} diventa un \textsl{Agreement} nella nostra applicazione, come un \textsl{Responsabile Scientifico} diventa uno \textsl{ChiefScientist}.\newline 
-I termini del Modello di Dominio sono in inglese, come si usa fare nell'Ingegneria del Software, perciò di solito si stila un \textsl{Dizionario} che associa termini del dominio a termini del modello: ad esempio, nel dizionario si scriverà qualcosa tipo ''Convenzione = Agreement'', così da non perdersi nelle eventuali ambiguità provocate dall'uso di due lingue diverse.\newline
-Quest'ultimo aspetto è una delle caratteristiche più utili di un modello di dominio: specifica un insieme di termini non ambigui che si riferiscono al dominio. In questo modo tutte le volte che ci si riferirà ad un Responsabile Scientifico si scriverà "Responsabile Scientifico", e non "Docente" per esempio, così che non ci sia modo di confondersi. Sembra un problema di poco conto, ma è fondamentale mettersi d'accordo su come ci si riferisce ad uno stesso concetto, per evitare che il caos prenda il controllo e regni sovrano.
+Il Modello di Dominio è una descrizione delle relazioni tra le \textsl{classi} dell'applicazione: senza addentrarsi nei dettagli della \textsl{Programmazione ad Oggetti}, il concetto è che una classe rappresenta un oggetto del mondo reale; così una \textsl{Convenzione} diventa un \textsl{Agreement} nell'applicazione, come un \textsl{Responsabile Scientifico} diventa uno \textsl{ChiefScientist}.\newline 
+I termini del Modello di Dominio sono in inglese, come si usa fare nell'Ingegneria del Software, perciò di solito si stila un \textsl{Dizionario} che associa termini del dominio a termini del modello: ad esempio, nel dizionario si scriverà qualcosa tipo \textquotedblleft Convenzione = Agreement\textquotedblright{}, così da non perdersi nelle eventuali ambiguità provocate dall'uso di due lingue diverse.\newline
+Quest'ultimo aspetto è una delle caratteristiche più utili di un modello di dominio: specifica un insieme di termini non ambigui che si riferiscono al dominio. In questo modo tutte le volte che ci si riferirà ad un Responsabile Scientifico si scriverà \textquotedblleft Responsabile Scientifico", e non \textquotedblleft Docente" per esempio, così che non ci sia modo di confondersi. Sembra un problema di poco conto, ma è fondamentale mettersi d'accordo su come ci si riferisce ad uno stesso concetto, per evitare che il caos prenda il controllo e regni sovrano.
 \paragraph{Casi d'Uso}
 Il diagramma dei Casi d'Uso descrive l'insieme delle funzionalità dell'applicazione, mettendo in evidenza come usarle e chi le usa. In questo modo, per esempio, si specifica che è un Operatore che si occupa dell'\textsl{Inserimento di una Convenzione/Contributo}, e non un Responsabile Scientifico.\newline
 Il diagramma dei Casi d'Uso è una specifica di alto livello di ciò che l'applicazione deve fare, ed è per questo che è fondamentale per lo sviluppo iniziale di un'applicazione: gli sviluppatori e gli \textsl{Stakeholders} - chi ha interesse nello sviluppo dell'applicazione - si possono mettere d'accordo su cosa l'applicazione deve fare, e come lo deve fare, cioè come l'utente deve interagire con il sistema; spesso quest'ultimo punto viene specificato in termini di \textsl{Mockups}, ovvero di disegni che prototipizzino quella che diventerà l'interfaccia utente.
@@ -67,7 +67,7 @@ Il Capitolo \ref{code} descrive come il sistema reagisce internamente all'input 
 Nei prossimi paragrafi si dà una breve descrizione delle idee principali dietro ad ognuno di questi argomenti.
 
 \paragraph{Login}
-Il login si effettuando confrontando le credenziali inserite nella fase di Login con quelle contenute nel database interno del'applicazione; qualora non si abbia un riscontro positivo, si provvede a contattare un database di ateneo, \textsl{SIAF}, attraverso il protocollo \textsl{LDAPS} gestito in Jama dalla libreria \textsl{JLDAP}, descritta nella Sezione \ref{jldap}.
+Il login si effettuando confrontando le credenziali inserite nella fase di Login con quelle contenute nel database interno dell'applicazione; qualora non si abbia un riscontro positivo, si provvede a contattare un database di ateneo, \textsl{SIAF}, attraverso il protocollo \textsl{LDAPS} gestito in Jama dalla libreria \textsl{JLDAP}, descritta nella Sezione \ref{jldap}.
 
 \paragraph{Lista convenzioni}
 Alla base di ogni lista delle convenzioni ci sono i seguenti elementi:
@@ -91,7 +91,7 @@ I componenti da definire durante l'inclusione di una nuova entità nel modello s
 \item un DAO\newline
 
 \end{itemize}
-Il controllore recupera i dati attraverso il DAO, il bean di presentazione li 'formatta' nella maniera adatta per visualizzarli nella pagina.
+Il controllore recupera i dati attraverso il DAO, il bean di presentazione li \textquoteleft formatta' nella maniera adatta per visualizzarli nella pagina.
 
 \paragraph{Strategie per il calcolo delle aliquote}
-Durante l'inserimento di una convenzione, non tutti i campi della ripartizione sono 'liberi': la maggior parte di essi sono calcolati in funzione di altri dati. Per gestire in maniera efficace la questione, e per permettere la possibilità di cambiare aliquote con facilità, si usa il pattern \textsl{Strategy} - si rimanda alla Sezione \ref{strategySection} per ulteriori dettagli. 
+Durante l'inserimento di una convenzione, non tutti i campi della ripartizione sono \textquoteleft liberi': la maggior parte di essi sono calcolati in funzione di altri dati. Per gestire in maniera efficace la questione, e per permettere la possibilità di cambiare aliquote con facilità, si usa il pattern \textsl{Strategy} - si rimanda alla Sezione \ref{strategySection} per ulteriori dettagli. 
