--- a/Docs/Tesi/filler.tex
+++ b/Docs/Tesi/filler.tex
@@ -11,7 +11,7 @@ Il meccanismo in base al quale calcolare le quote \textquoteleft derivate\textqu
 \end{figure}
 
 
-Nel pattern Strategy, l'algoritmo è incapsulato in una classe separata rispetto al contesto in cui deve essere usato. Inoltre, tutti gli algoritmi (o meglio, tutte le classi che rappresentano un algoritmo) implementano un'interfaccia comune. L'oggetto all'interno del quale si deve adoperare un algoritmo di quel tipo avrà un riferimento all'interfaccia, rimanendo così slegata dalle classi concrete: questo rende semplice modificare in fase di manutenzione l'implementazione da utilizzare. Lo schema del pattern è raffigurato in figura \ref{strategy}; per maggiori dettagli, si consiglia INSERIRE RIFERIMENTO A DESIGN PATTERN.\\
+Nel pattern Strategy, l'algoritmo è incapsulato in una classe separata rispetto al contesto in cui deve essere usato. Inoltre, tutti gli algoritmi (o meglio, tutte le classi che rappresentano un algoritmo) implementano un'interfaccia comune. L'oggetto all'interno del quale si deve adoperare un algoritmo di quel tipo avrà un riferimento all'interfaccia, rimanendo così slegata dalle classi concrete: questo rende semplice modificare in fase di manutenzione l'implementazione da utilizzare. Lo schema del pattern è raffigurato in figura \ref{strategy}; per maggiori dettagli, si consiglia \cite{gof}.\\
 
 \subsubsection{\textsl{Filler}}
 
