--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 \usepackage{epstopdf}
 \usepackage{comment}
+\usepackage{longtable}
+\usepackage{eurosym}
 \graphicspath{ {./images/} }
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -121,7 +123,7 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \label{freemarker}
 \input{freemarker}
 \chapter{Test funzionale e collaudo}
-\input{utilizzo}
+\input{collaudo}
 \label{howto}
 \chapter{Dietro le quinte}
 \label{code}
