--- a/Docs/Tesi/money.tex
+++ b/Docs/Tesi/money.tex
@@ -13,5 +13,5 @@ La classe \lstinline{Money} ha due attributi fondamentali: la quantità di denar
 Le operazioni di confronto, addizione e sottrazione fra somme di denaro (nella stessa valuta), così come anche quella di moltiplicazione per uno scalare, coincidono con le rispettive operazioni eseguite sui numeri reali. L'operazione di divisione è invece più complessa e merita una trattazione specifica. 
 
 \paragraph{La divisione}
-Quando si divide una somma di denaro, sorge subito un problema: se il risultato della divisione non è un numero rappresentabile con la precisione della valuta corrente, non si può semplicemente effettuare un arrotondamento, perché la somma di tutti i risultati potrebbe non coincidere con l'importo di partenza. Ad esempio, dividendo 100.02€ per 5 si ottiene 20.004€, che viene arrotondato a 20.00€; in questo modo, però, vengono persi 0.02€. \\
-Vi sono varie tecniche alternative per risolvere questo problema. La più comune è la seguente: il risultato della divisione di un importo X per un numero N è una collezione di N valori la cui somma fa X e che differiscono fra loro per non più della minima somma di denaro disponibile per la valuta di X. Per esempio, si consideri nuovamente l'esempio precedente. Applicando il metodo appena descritto, il risultato della divisione di 100.02€ per 5 è [20.01€, 20.01€, 20.00€, 20.00€, 20.00€]: una collezione di 5 valori la cui somma dà 100.02€ e che differiscono fra di loro per non più di un centesimo, che è l'importo minimo possibile nella valuta data (l'euro). Notare che la \textquoteleft posizione\textquoteright{} degli elementi a cui \textquoteleft spetta\textquoteright{} un centesimo in più non è definita dall'algoritmo. Per la stragrande maggioranza delle applicazioni è irrilevante e si assume per convenzione di suddividere il resto fra i primi risultati.
+Quando si divide una somma di denaro, sorge subito un problema: se il risultato della divisione non è un numero rappresentabile con la precisione della valuta corrente, non si può semplicemente effettuare un arrotondamento, perché la somma di tutti i risultati potrebbe non coincidere con l'importo di partenza. Ad esempio, dividendo 100.02\euro  per 5 si ottiene 20.004\euro , che viene arrotondato a 20.00\euro ; in questo modo, però, vengono persi 0.02\euro . \\
+Vi sono varie tecniche alternative per risolvere questo problema. La più comune è la seguente: il risultato della divisione di un importo X per un numero N è una collezione di N valori la cui somma fa X e che differiscono fra loro per non più della minima somma di denaro disponibile per la valuta di X. Per esempio, si consideri nuovamente l'esempio precedente. Applicando il metodo appena descritto, il risultato della divisione di 100.02\euro  per 5 è [20.01\euro , 20.01\euro , 20.00\euro , 20.00\euro , 20.00\euro ]: una collezione di 5 valori la cui somma dà 100.02\euro  e che differiscono fra di loro per non più di un centesimo, che è l'importo minimo possibile nella valuta data (l'euro). Notare che la \textquoteleft posizione\textquoteright{} degli elementi a cui \textquoteleft spetta\textquoteright{} un centesimo in più non è definita dall'algoritmo. Per la stragrande maggioranza delle applicazioni è irrilevante e si assume per convenzione di suddividere il resto fra i primi risultati.
