--- a/Docs/Tesi/collaudo.tex
+++ b/Docs/Tesi/collaudo.tex
@@ -1,7 +1,7 @@
 Ogni caso d'uso può dar luogo ad una varietà di comportamenti in base alla sequenza di percorsi base ed alternativi che viene eseguita.
 Per ogni caso d'uso è possibile definire un insieme di casi di test che esercitino tutti i possibili comportamenti. La dizione  ``tutti i comportamenti'' è di per sè vaga, e deve essere chiarita specificando il tipo di 
 copertura (tutt gli gli archi, tutti i percorsi, etc.) che si intende usare. Comunque scelto il tipo di copertura i casi di test derivati possono essere un numero molto elevato. Per ridurre l'ordine di grandezza di questo numero
-si possono definire degli scenari di alto livello che aggreghino più casi di test insieme. In seguito utilizziamo questa tecnica per effettuare un collaudo dell'applicativo.
+si possono definire degli scenari di alto livello che aggreghino più casi di test insieme. In seguito si utilizza questa tecnica per effettuare un collaudo dell'applicativo.
 
 \section{Scenari di alto livello}
 Si elencano gli scenari che sono stati usato per il collaudo.
